[package]
name = "udict"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lsmb/udict"
description = "A CLI tool for fetching Urban Dictionary definitions"
homepage = "https://github.com/lsmb/udict"
license = "MIT"
authors = ["lsmb <lsmbc@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
termimad = "0.14"
termion = "1.5.6"
scraper = "0.12.0"
textwrap = "0.15"
